content: add Cabin Analytics guide

--- a/src/components/AnalyticsGuidesNav.astro
+++ b/src/components/AnalyticsGuidesNav.astro
@@ -10,7 +10,7 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 // const enPages = englishPages.filter(isCmsEntry);
 
 /** Array of services we have good content for and want to show first in the list. */
-const showFirst = ['Plausible'];
+const showFirst = ['Plausible', 'Fathom'];
 // Reverse the array to make our logic simpler later.
 showFirst.reverse();
 
