--- a/src/components/NavGrid/CardsNav.astro
+++ b/src/components/NavGrid/CardsNav.astro
@@ -52,20 +52,12 @@ const currentPage = new URL(Astro.request.url).pathname;
 </section>
 
 <style>
-	.cards-nav {
-		padding: 2rem 0;
-		accent-color: var(--theme-accent-secondary);
-	}
-
 	.description {
-		margin-top: 0.25rem;
-		color: var(--theme-text-lighter);
-		font-size: var(--theme-text-sm);
+		color: var(--sl-color-gray-2);
+		font-size: var(--sl-text-body-sm);
 	}
 
 	.tags {
-		margin-top: 0.5rem !important;
-		display: flex;
 		gap: 0.5rem;
 	}
 </style>
