--- a/src/components/NavGrid/Grid.astro
+++ b/src/components/NavGrid/Grid.astro
@@ -14,18 +14,19 @@ const { minimal } = Astro.props as Props;
 	.fluid-grid {
 		--column-min-width: 13rem;
 		text-align: start;
-		padding: 2rem 0;
+		margin-block: 0.5rem;
+		padding-inline-start: 0;
 		display: grid;
 		grid-template-columns: repeat(auto-fill, minmax(var(--column-min-width), 1fr));
 		grid-template-columns: repeat(auto-fill, minmax(min(var(--column-min-width), 100%), 1fr));
-		gap: 2rem;
+		gap: 1.5rem 2rem;
 		list-style: none;
 		align-items: start;
 	}
 
 	@media (min-width: 37.75em) {
 		.fluid-grid {
-			gap: 2rem 2.5rem;
+			gap: 2rem;
 		}
 	}
 
