Add EthicalAds to Table of Contents section

--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -1,7 +1,7 @@
 ---
 import type { Props } from '@astrojs/starlight/props';
 import Default from '@astrojs/starlight/components/TableOfContents.astro'
-// import EthicalAds from './EthicalAds.astro';
+import EthicalAds from './EthicalAds.astro';
 ---
 <Default {...Astro.props}><slot /></Default>
 
@@ -21,9 +21,7 @@ import Default from '@astrojs/starlight/components/TableOfContents.astro'
   </li>
 </ul>
 
-<!--
 <EthicalAds />
--->
 
 <style>
 	.contribute {
