Update for Thulite

--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -17,7 +17,7 @@ import EthicalAds from './EthicalAds.astro';
     <a href="https://github.com/orgs/gethyas/discussions/new?category=support">Ask a question</a>
   </li>
   <li>
-    <a href="https://github.com/sponsors/gethyas">Sponsor Hyas</a>
+    <a href="https://github.com/sponsors/gethyas">Sponsor Thulite</a>
   </li>
 </ul>
 
