Update for migration from Hyas to Thulite

--- a/src/components/EthicalAds.astro
+++ b/src/components/EthicalAds.astro
@@ -2,7 +2,7 @@
 ---
 <script is:inline async src="https://media.ethicalads.io/media/client/ethicalads.min.js"></script>
 
-<div data-ea-publisher="httpgetdoksorg" data-ea-type="image" id="hyas-docs-single"></div>
+<div data-ea-publisher="httpgetdoksorg" data-ea-type="image" id="thulite-docs-single"></div>
 
 <style is:global>
   div [data-ea-publisher].loaded {
