--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -8,16 +8,16 @@ import EthicalAds from './EthicalAds.astro';
 <h2 class="contribute">Contribute</h2>
 <ul>
   <li>
-    <a href="https://github.com/gethyas/hyas/issues/new/choose">Create an issue</a>
+    <a href="https://github.com/thuliteio/thulite/issues/new/choose">Create an issue</a>
   </li>
   <li>
-    <a href="https://github.com/orgs/gethyas/discussions/new?category=ideas">Share an idea</a>
+    <a href="https://github.com/orgs/thuliteio/discussions/new?category=ideas">Share an idea</a>
   </li>
   <li>
-    <a href="https://github.com/orgs/gethyas/discussions/new?category=support">Ask a question</a>
+    <a href="https://github.com/orgs/thuliteio/discussions/new?category=support">Ask a question</a>
   </li>
   <li>
-    <a href="https://github.com/sponsors/gethyas">Sponsor Thulite</a>
+    <a href="https://github.com/sponsors/thuliteio">Sponsor Thulite</a>
   </li>
 </ul>
 
